// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`should add condition to Next.js built-in oneOf rule that adds CSS support 1`] = `
Object {
  "module": Object {
    "rules": Array [
      Object {
        "oneOf": Array [
          Object {
            "oneOf": Array [
              Object {
                "test": /\\\\\\.module\\\\\\.css\\$/,
              },
            ],
            "test": /\\\\\\.css\\$/,
          },
        ],
      },
    ],
  },
}
`;

exports[`should not wrap rule that has \`resolve.fullySpecified = false\` 1`] = `
Object {
  "module": Object {
    "rules": Array [
      Object {
        "resolve": Object {
          "fullySpecified": false,
        },
        "test": /\\\\\\.m\\?js/,
      },
      Object {
        "oneOf": Array [
          Object {
            "test": /\\\\\\.js\\$/,
          },
        ],
      },
    ],
  },
}
`;

exports[`should return in .oneOf rules sent in .rules 1`] = `
Object {
  "module": Object {
    "rules": Array [
      Object {
        "oneOf": Array [
          Object {
            "test": /\\\\\\.js\\$/,
          },
        ],
      },
    ],
  },
}
`;
